--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@evenrealities/even_hub_sdk": "^0.0.7",
     "@jappyjan/even-realities-ui": "^0.0.8",
+    "ioredis": "^5.9.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
   },
